--- a/django_bootstrap_static_file/templates/home.html
+++ b/django_bootstrap_static_file/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,5 +9,6 @@
   </head>
   <body>
     <h1>This Is Home Page</h1>
+    <img src="{% static 'pic.JPG' %}" alt="rakib hasan" />
   </body>
 </html>
