image loaded from app

--- a/django_bootstrap_static_file/first_app/templates/index.html
+++ b/django_bootstrap_static_file/first_app/templates/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>I am inside first app</h1>
-    <img src="{% static 'pic1.JPG' %}" alt="rakib hasan" />
+    <img src="{% static 'pic.JPG' %}" alt="rakib hasan" />
   </body>
 </html>
 
