--- a/django_bootstrap_static_file/first_app/templates/index.html
+++ b/django_bootstrap_static_file/first_app/templates/index.html
@@ -48,7 +48,29 @@
           </div>
         </div>
       </nav>
-    <h1 class="text-danger">I am inside first app</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">userId</th>
+            <th scope="col">id</th>
+            <th scope="col">title</th>
+            <th scope="col">body</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% for i in data %}
+          <tr>
+            <th scope="row">{{i.userId}}</th>
+            <td>{{i.id}}</td>
+            <td>{{i.title}}</td>
+            <td>{{i.body}}</td>
+          </tr>
+          {% endfor %}
+          
+        </tbody>
+      </table>
+    
+      <h1 class="text-danger">I am inside first app</h1>
     <img class="image" src="{% static 'pic.JPG' %}" alt="rakib hasan" />
 
 
