--- a/django_bootstrap_static_file/first_app/templates/index.html
+++ b/django_bootstrap_static_file/first_app/templates/index.html
@@ -21,10 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href=" {% url "about" id=1%} ">About</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -48,6 +48,7 @@
           </div>
         </div>
       </nav>
+      <h1>{{id}}</h1>
       <table class="table">
         <thead>
           <tr>
