practice task finished

--- a/practice_task/templates/home.html
+++ b/practice_task/templates/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>This is home page, GO to inherit page, set url <a href="http://127.0.0.1:8000/first/">http://127.0.0.1:8000/first/</a> </h1>
+  </body>
 </html>
