--- a/resturant/meal/templates/index.html
+++ b/resturant/meal/templates/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Inside mels</h1>
+    {% block content %}
+
+<div class="container food_list">
+  <h1 class="text-center m-5">All iteams in Khabar Ghor Restaurent</h1>
+
+  <div class="d-flex flex-wrap gap-5">
+    {% for i in categories %}
+
+    <div class="card" style="width: 22rem">
+      <img src="{{i.strCategoryThumb}}" class="card-img-top" alt="foodimg" />
+      <div class="card-body">
+        <h6 class="card-title">Food Category : {{i.idCategory}}</h6>
+        <h5 class="card-title">Food : {{i.strCategory}}</h5>
+        <p class="card-text">{{i.strCategoryDescription | truncatewords:10}}</p>
+      </div>
+    </div>
+
+    {% endfor %}
+  </div>
+</div>
+
+{% endblock content %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
