--- a/resturant/templates/base.html
+++ b/resturant/templates/base.html
@@ -17,7 +17,7 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="{$ url 'home' $}">Home</a>
                       <a class="nav-link" href="#">Show Item</a>
                       <a class="nav-link" href="#">About_us</a>
                       
@@ -28,6 +28,8 @@
     </header>
     <main>
         <h1>Welcome To Khabar Ghor</h1>
+        {% block content %}
+        {% endblock  %}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
