--- a/resturant/templates/about.html
+++ b/resturant/templates/about.html
@@ -18,8 +18,8 @@
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                       <a class="nav-link active" aria-current="page" href="{$ url 'home' $}">Home</a>
-                      <a class="nav-link" href="{% url 'nav' %}">Show Item</a>
-                      <a class="nav-link" href="{% url 'about' %}">About_us</a>
+                      <a class="nav-link" href="#">Show Item</a>
+                      <a class="nav-link" href="#">About_us</a>
                       
                     </div>
                   </div>
@@ -27,9 +27,28 @@
               </nav>
     </header>
     <main>
-        <h1>Welcome To Khabar Ghor</h1>
         {% block content %}
-        {% endblock  %}
+
+<div class="container food_list">
+  <h1 class="text-center m-5">All iteams in Khabar Ghor Restaurent</h1>
+
+  <div class="d-flex flex-wrap gap-5">
+    {% for i in categories %}
+
+    <div class="card" style="width: 22rem">
+      <img src="{{i.strCategoryThumb}}" class="card-img-top" alt="foodimg" />
+      <div class="card-body">
+        <h6 class="card-title">Food Category : {{i.idCategory}}</h6>
+        <h5 class="card-title">Food : {{i.strCategory}}</h5>
+        <p class="card-text">{{i.strCategoryDescription | truncatewords:10}}</p>
+      </div>
+    </div>
+
+    {% endfor %}
+  </div>
+</div>
+
+{% endblock content %}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
