--- a/django_form/templates/base.html
+++ b/django_form/templates/base.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="{% url 'aboutpage' %}">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Form</a>
+              <a class="nav-link" href="{% url 'submit_form' %}">Form</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Django Form</a>
