--- a/django_form/first_app/templates/form.html
+++ b/django_form/first_app/templates/form.html
@@ -1,21 +1,29 @@
 {% extends "base.html" %} 
 
 {% block content %}
-<form method='post' >
-    {% csrf_token %}
-    <div class="mb-3">
-        <label for="exampleInputName" class="form-label">Name</label>
-        <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp" name='username'>
-        <div id="emailHelp" class="form-text">We'll never share your name with anyone else.</div>
-      </div>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name='email' >
-      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-    
-    
-    
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+<div class="width: 50%; height: 500px; margin: auto; " class="pt-5 text-center">
+    <h3 class="text-center" >Movie rating form</h3>
+    <form method='post' action='/about/'  >
+        {% csrf_token %}
+        <div class="mb-3">
+            <label for="exampleInputName" class="form-label">Name</label>
+            <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp" name='username'>
+            <div id="emailHelp" class="form-text">We'll never share your name with anyone else.</div>
+          </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name='email' >
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <select class="form-select" aria-label="Default select example" method='post' name="select">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      
+</div>
+
 {% endblock  %}
