--- a/django_form/templates/base.html
+++ b/django_form/templates/base.html
@@ -38,6 +38,9 @@
               <a class="nav-link" href="{% url 'submit_form' %}">Form</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'django_form' %}">Django_form</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="">Django Form</a>
             </li>
           </ul>
