--- a/django_form/first_app/templates/django_form.html
+++ b/django_form/first_app/templates/django_form.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-{{form}}
+{% load crispy_forms_tags%}
+<form method='post' enctype="multipart/form-data" >
+    {% csrf_token %}
+    {{form | crispy}}
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 {% endblock  %}
