--- a/blog_django/author/templates/add_author.html
+++ b/blog_django/author/templates/add_author.html
@@ -1,5 +1,12 @@
  {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
  {% block content %}
- <h1>Add Author Page</h1>
+ <form method="post" style="width:50%; margin: auto;" >
+    {% csrf_token %}
+    <h1>Add Author Page</h1>
+
+    <h1>{{form | crispy}}</h1>
+    <button type="submit" class="btn btn-warning">submit</button>
+</form>
+ 
  {% endblock  %}
