--- a/blog_django/post/templates/add_post.html
+++ b/blog_django/post/templates/add_post.html
@@ -3,7 +3,7 @@
  {% block content %}
  <form method="post" style="width:50%; margin: auto;" >
     {% csrf_token %}
-    <h1>Add Profile Page</h1>
+    <h1>Add Post Page</h1>
 
     <h1>{{form | crispy}}</h1>
     <button type="submit" class="btn btn-warning">submit</button>
