load data from backend in frontend

--- a/blog_django/templates/base.html
+++ b/blog_django/templates/base.html
@@ -21,13 +21,13 @@
               </li>
             
               <li class="nav-item">
-                <a class="nav-link" href="#">Add_author</a>
+                <a class="nav-link" href="{% url 'add_author'%}">Add_author</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Add_category</a>
+                <a class="nav-link" href="{% url 'add_category' %}">Add_category</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Add_Post</a>
+                <a class="nav-link" href="{% url 'add_post' %}">Add_Post</a>
               </li>
              
               
