--- a/blog_django/templates/home.html
+++ b/blog_django/templates/home.html
@@ -1,24 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row">
-    <div class="col-sm-6 mb-3 mb-sm-0">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="row container d-flex justify-content-center ">
+    {% for post in data  %}
+    
+    <div class="col-sm-3 mb-3 mb-sm-0">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{post.title}}</h5>
+            {% comment %} <h5 class="card-title">{{post.category.name}}</h5> {% endcomment %}
+            <h5 class="card-title">{{post.author}}</h5>
+            <p class="card-text">{{post.content}}</p>
+            <p>Author: {{post.author.name}}</p>
+            <p>Category:
+
+                {% for cat in post.category.all %}
+                
+                <button class="btn btn-warning disabled m-2">{{cat.name}}</button>
+                {% endfor %}
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
+    {% endfor %}
+    
   </div>
 {% endblock  %}
