--- a/blog_django/templates/home.html
+++ b/blog_django/templates/home.html
@@ -20,7 +20,7 @@
                 {% endfor %}
             </p>
             <a href="{% url 'edit_post' post.id %}" class="btn btn-warning">Edit</a>
-            <a href="{% url 'edit_post' post.id %}" class="btn btn-danger">Delete</a>
+            <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a>
           </div>
         </div>
       </div>
