task from created and rendered data from back_end successfully

--- a/task_management/task/templates/add_task.html
+++ b/task_management/task/templates/add_task.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-
-<h1>Add Task </h1>
-
+<form method="post" style="width:50%; margin: auto;">
+    {% csrf_token %}
+    <h1>Add Task </h1>
+    {{data | crispy}}
+    <button type="submit" class="btn btn-warning">submit</button>
+</form>
 {% endblock  %}
