--- a/task_management/templates/base.html
+++ b/task_management/templates/base.html
@@ -20,10 +20,10 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'add_task'%}">Add_Task</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Add_Category</a>
+                <a class="nav-link" href="{% url 'add_category' %}">Add_Category</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Show_Task</a>
+                <a class="nav-link" href="{% url 'homepage' %}">Show_Task</a>
               </li>
               
                 
