--- a/task_management/templates/home.html
+++ b/task_management/templates/home.html
@@ -7,18 +7,29 @@
     <div class="col-sm-3 mb-3 mb-sm-0">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">{{post.title}}</h5>
-            {% comment %} <h5 class="card-title">{{post.category.name}}</h5> {% endcomment %}
-            <h5 class="card-title">{{post.author}}</h5>
-            <p class="card-text">{{post.content}}</p>
-            <p>Author: {{post.author.name}}</p>
+            <h5 class="card-title">{{post.taskTitle}}</h5>
+            
+            {% comment %} <h5 class="card-title">{{post.is_completed}}</h5> {% endcomment %}
+            <p class="card-text">{{post.taskDescription}}</p>
+            <p>Created Task: {{post.taskAssignDate}}</p>
             <p>Category:
 
                 {% for cat in post.category.all %}
                 
-                <button class="btn btn-primary disabled m-2 btn-sm">{{cat.name}}</button>
+                <button class="btn btn-primary disabled m-2 btn-sm">{{cat.CategoryName}}</button>
                 {% endfor %}
             </p>
+            {% if post.is_completed %}
+                        <button  class="btn btn-success mt-2" disabled>Completed</button>
+                        
+                        {% else %}
+                        <div style="padding-top: 10px;">
+                            <a href="" class="btn btn-warning"> Edit </a>
+                            <a href="" class="btn btn-danger"> Delete </a>
+                        </div>
+                        {% endif %}
+                        {% comment %} {% url 'edit_task' i.id %} {% endcomment %}
+                        {% comment %} {% url 'delete_task' i.id %} {% endcomment %}
             {% comment %} <a href="{% url 'edit_post' post.id %}" class="btn btn-warning">Edit</a> {% endcomment %}
             {% comment %} <a href="{% url 'delete_post' post.id %}" class="btn btn-danger">Delete</a> {% endcomment %}
           </div>
