--- a/blog_django/author/templates/register.html
+++ b/blog_django/author/templates/register.html
@@ -3,10 +3,10 @@
  {% block content %}
  <form method="post" style="width:50%; margin: auto;" >
     {% csrf_token %}
-    <h1>Add Author Page</h1>
+    <h1>Register Page</h1>
 
     <h1>{{form | crispy}}</h1>
-    <button type="submit" class="btn btn-warning">submit</button>
+    <button type="submit" class="btn btn-warning mb-5">submit</button>
 </form>
  
  {% endblock  %}
