--- a/blog_django/templates/base.html
+++ b/blog_django/templates/base.html
@@ -29,24 +29,38 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_post' %}">Add_Post</a>
               </li>
-             
-              
-              
             </ul>
             <div class='d-flex text-white text-decoration-none'>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'register'%}">Sign_Up</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'register'%}">Login</a>
+                <a class="nav-link" href="{% url 'user_login'%}">Login</a>
               </li>
             </div>
           </div>
         </div>
       </nav>
     </header>
+    <main>
+    
+      {% for i  in message %}
+      <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <img src="..." class="rounded me-2" alt="...">
+          <strong class="me-auto">Message</strong>
+          
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          <h3 class="text-{{i.tags}}" >{{i}}</h3>
+        </div>
+      </div>
+      {% endfor %}
     {% block content %}
    {% endblock %}
+
+  </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
