--- a/blog_django/templates/base.html
+++ b/blog_django/templates/base.html
@@ -26,17 +26,29 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_category' %}">Add_category</a>
               </li>
+              {% if request.user.is_authenticated  %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'add_post' %}">Add_Post</a>
+                <a class="nav-link" href="{% url 'add_post'%}">Add_Post</a>
               </li>
+              {% endif %}
             </ul>
             <div class='d-flex text-white text-decoration-none'>
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              {% if request.user.is_authenticated  %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'register'%}">Sign_Up</a>
+                <a class="nav-link" href="{% url 'user_login'%}">Profile</a>
+              </li>
+
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link btn btn-warning text-dark" href="{% url 'register'%}">Sign_Up</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'user_login'%}">Login</a>
               </li>
+              
+              {% endif %}
+            </ul>
             </div>
           </div>
         </div>
@@ -45,17 +57,11 @@
     <main>
     
       {% for i  in message %}
-      <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-          <img src="..." class="rounded me-2" alt="...">
-          <strong class="me-auto">Message</strong>
-          
-          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body">
+      
+        <div>
           <h3 class="text-{{i.tags}}" >{{i}}</h3>
         </div>
-      </div>
+      
       {% endfor %}
     {% block content %}
    {% endblock %}
