--- a/blog_django/templates/base.html
+++ b/blog_django/templates/base.html
@@ -19,13 +19,17 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a>
               </li>
-            
+              {% if request.user.is_authenticated  %}
+              <li class="nav-item">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'register'%}">Add_author</a>
               </li>
+              {% endif %}
+              {% if request.user.is_authenticated  %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_category' %}">Add_category</a>
               </li>
+              {% endif %}
               {% if request.user.is_authenticated  %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_post'%}">Add_Post</a>
@@ -36,7 +40,7 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if request.user.is_authenticated  %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_login'%}">Profile</a>
+                <a class="nav-link" href="{% url 'profile'%}">Profile</a>
               </li>
 
               {% else %}
