password change successfully mplemented

--- a/blog_django/author/templates/pass_change.html
+++ b/blog_django/author/templates/pass_change.html
@@ -3,8 +3,8 @@
  {% block content %}
  <form method="post" style="width:50%; margin: auto;" >
     {% csrf_token %}
-    <h1>Profile Page</h1>
-    <a class="btn btn-warning btn-sm" href="{% url 'pass_change' %}">Change Your Password</a>
+    <h1>Change Your Password From Here</h1>
+
     <h1>{{form | crispy}}</h1>
     <button type="submit" class="btn btn-warning mb-5">submit</button>
 </form>
