--- a/blog_django/templates/base.html
+++ b/blog_django/templates/base.html
@@ -40,7 +40,7 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if request.user.is_authenticated  %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'profile'%}">Profile</a>
+                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
               </li>
 
               {% else %}
@@ -59,14 +59,20 @@
       </nav>
     </header>
     <main>
-    
+      {% for i in messages %}
+      <div class="">
+        <h3 class="text-{{i.tags}}">{{i}}</h3>
+      </div>
+  
+      {% endfor %} 
+{% comment %}     
       {% for i  in message %}
       
         <div>
           <h3 class="text-{{i.tags}}" >{{i}}</h3>
         </div>
       
-      {% endfor %}
+      {% endfor %} {% endcomment %}
     {% block content %}
    {% endblock %}
 
