--- a/blog_django/author/templates/update_profile.html
+++ b/blog_django/author/templates/update_profile.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
  {% block content %}
+
  <div>
     <h1>Profile Page</h1>
 
  </div>
- {% comment %} <form method="post" style="width:50%; margin: auto;" >
+ <form method="post" style="width:50%; margin: auto;" >
     {% csrf_token %}
-    <h1>Profile Page</h1>
+    <h1>Update Your Profile</h1>
     <a class="btn btn-warning btn-sm" href="{% url 'pass_change' %}">Change Your Password</a>
     <h1>{{form | crispy}}</h1>
     <button type="submit" class="btn btn-warning mb-5">submit</button>
-</form> {% endcomment %}
+</form>
  
  {% endblock  %}
