update profile implemented

--- a/blog_django/author/templates/profile.html
+++ b/blog_django/author/templates/profile.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
  {% block content %}
  <div>
-    <h1>Profile Page</h1>
+    <a class='btn btn-primary' href="{% url 'edit_profile'%}">Edit Your Profile</a>
 
  </div>
  {% comment %} <form method="post" style="width:50%; margin: auto;" >
