--- a/blog_django/templates/home.html
+++ b/blog_django/templates/home.html
@@ -11,7 +11,7 @@
             {% comment %} <h5 class="card-title">{{post.category.name}}</h5> {% endcomment %}
             <h5 class="card-title">{{post.author}}</h5>
             <p class="card-text">{{post.content}}</p>
-            <p>Author: {{post.author.name}}</p>
+            <p>Author: {{post.author.first_name}}  {{post.author.last_name}}</p>
             <p>Category:
 
                 {% for cat in post.category.all %}
