--- a/blog_django/templates/base.html
+++ b/blog_django/templates/base.html
@@ -42,14 +42,18 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'profile' %}">Profile</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-danger text-white" href="{% url 'user_logout'%}">Logout</a>
+              </li>
 
               {% else %}
               <li class="nav-item">
                 <a class="nav-link btn btn-warning text-dark" href="{% url 'register'%}">Sign_Up</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'user_login'%}">Login</a>
+                <a class="nav-link btn btn-warning text-dark" href="{% url 'user_login'%}">Login</a>
               </li>
+              
               
               {% endif %}
             </ul>
