--- a/blog_django/templates/base.html
+++ b/blog_django/templates/base.html
@@ -77,8 +77,12 @@
         </div>
       
       {% endfor %} {% endcomment %}
-    {% block content %}
+      <div style="background-color: #e4e4e4">
+
+        {% block content %}
    {% endblock %}
+      </div>
+    
 
   </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
