--- a/blog_django/templates/home.html
+++ b/blog_django/templates/home.html
@@ -1,7 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row container d-flex justify-content-center ">
+<div class="d-flex flex-wrap p-4">
+<div class="col-2">
+  {% for cat in category %}
+  
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="category" id="{{cat.id}}" >
+    <label class="form-check-label" for="{{cat.id}}">
+      <a href="{% url 'category_post' cat.slug %}">{{cat.name}}</a>
+    </label>
+  </div>
+  
+  
+  {% endfor %}
+  
+</div>
+
+<div class="col-10">
+  <h4>{{data | length}} Results Found</h4>
+  <div class="row container d-flex justify-content-center ">
     {% for post in data  %}
     
     <div class="col-sm-3 mb-3 mb-sm-0">
@@ -11,7 +29,7 @@
             {% comment %} <h5 class="card-title">{{post.category.name}}</h5> {% endcomment %}
             <h5 class="card-title">{{post.author}}</h5>
             <p class="card-text">{{post.content}}</p>
-            <p>Author: {{post.author.first_name}}  {{post.author.last_name}}</p>
+            <p>Author: {{post.author.first_name}}  {{post.author.first_name}}</p>
             <p>Category:
 
                 {% for cat in post.category.all %}
@@ -27,4 +45,6 @@
     {% endfor %}
     
   </div>
+</div>
+</div>
 {% endblock  %}
