--- a/blog_django/templates/base.html
+++ b/blog_django/templates/base.html
@@ -6,7 +6,7 @@
     <title>Blog Site</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body>
+  <body  style="background-color: #e4e4e4">
     <header>
       <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -77,10 +77,10 @@
         </div>
       
       {% endfor %} {% endcomment %}
-      <div style="background-color: #e4e4e4">
+      <div>
 
         {% block content %}
-   {% endblock %}
+        {% endblock %}
       </div>
     
 
